<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GridImageSearch</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search_prompt">Enter search query</string>
    <string name="search_label">Search</string>
    <string name="image_title_label">Image Title</string>
    <string name="title_activity_image_display">Full Image</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="settings_header">Advanced Search Options</string>
    <string name="size_label">Image Size</string>
    <string name="settings_color">Color Filter</string>
    <string name="settings_type">Image Type</string>
    <string name="settings_site">Site Filter</string>
    
    <string-array name="imageSizes">
		<item>small</item>
		<item>medium</item>
		<item>large</item>
		<item>xlarge</item>
    </string-array>
    <string-array name="colorTypes">
		<item>white</item>
		<item>black</item>
		<item>brown</item>
		<item>blue</item>
		<item>gray</item>
		<item>green</item>
		<item>orange</item>
		<item>pink</item>
		<item>purple</item>
		<item>red</item>
		<item>teal</item>
		<item>yellow</item>
    </string-array>
    <string-array name="imageTypes">
		<item>photo</item>
		<item>face</item>
		<item>clipart</item>
		<item>lineart</item>
    </string-array>
		<string name="save">Save</string>

</resources>
